# GameDev-AudioEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
Examples/: CMakeLists.txt  README.md
cmake/: dependencies.cmake  git_cmd.cmake  presets.cmake  vcpkg_install.cmake
